--- a/ImageUploader.html
+++ b/ImageUploader.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>jsReport File Uploader</title>
+    <title>jsReport Image Uploader</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script>
